--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-5.74MB/s(Youtube:不良林), server: 213.183.53.208, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-484.5KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.02MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-3.22MB/s(Youtube:不良林), server: 213.183.59.206, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇺🇸 美国-3.03MB/s(Youtube:不良林), server: rooms.starspace.link, port: 443, type: trojan, password: 5HfENR8nt2PR8reH, sni: rooms.starspace.link, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-2.56MB/s(Youtube:不良林), server: 213.183.59.206, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇷🇺 俄罗斯联邦-2.99MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-802.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: rooms.starspace.link, port: 443, type: trojan, password: 5HfENR8nt2PR8reH, sni: rooms.starspace.link, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.00MB/s(Youtube:不良林), server: storage.starspace.link, port: 443, type: trojan, password: W8gVbKNAZlFzgGPn, sni: storage.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: snacks.starspace.link, port: 443, type: trojan, password: 0lbw6RXSl7eqCYMv, sni: snacks.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: events.starspace.link, port: 443, type: trojan, password: 3RWFPCmWd4lYIMof, sni: events.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.38MB/s(Youtube:不良林), server: snacks.starspace.link, port: 443, type: trojan, password: 0lbw6RXSl7eqCYMv, sni: snacks.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-304.0KB/s(Youtube:不良林), server: events.starspace.link, port: 443, type: trojan, password: 3RWFPCmWd4lYIMof, sni: events.starspace.link, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.23MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-5.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-484.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.02MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-5.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-484.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.02MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-5.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-484.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.02MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-5.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-484.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.02MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-5.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-484.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.02MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-5.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-484.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.02MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-5.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-484.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.02MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-802.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
