--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-2.56MB/s(Youtube:不良林), server: 213.183.59.206, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇷🇺 俄罗斯联邦-2.99MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-802.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-5.98MB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇯🇵 日本-17.80MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-261.8KB/s(Youtube:不良林), server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇯🇵 日本-5.07MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-11.08MB/s(Youtube:不良林), server: 3.35.207.65, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: outdoor.starspace.link, port: 443, type: trojan, password: 4brytjljFgnUu3WU, sni: outdoor.starspace.link, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: rooms.starspace.link, port: 443, type: trojan, password: 5HfENR8nt2PR8reH, sni: rooms.starspace.link, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.00MB/s(Youtube:不良林), server: storage.starspace.link, port: 443, type: trojan, password: W8gVbKNAZlFzgGPn, sni: storage.starspace.link, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.38MB/s(Youtube:不良林), server: snacks.starspace.link, port: 443, type: trojan, password: 0lbw6RXSl7eqCYMv, sni: snacks.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-304.0KB/s(Youtube:不良林), server: events.starspace.link, port: 443, type: trojan, password: 3RWFPCmWd4lYIMof, sni: events.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.23MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-802.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.80MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-261.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-11.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-802.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.80MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-261.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-11.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-802.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.80MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-261.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-11.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-802.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.80MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-261.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-11.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-802.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.80MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-261.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-11.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-802.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.80MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-261.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-11.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.51MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-802.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.80MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-261.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-11.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
