--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-5.98MB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇯🇵 日本-17.80MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-261.8KB/s(Youtube:不良林), server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇯🇵 日本-5.07MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-11.08MB/s(Youtube:不良林), server: 3.35.207.65, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: outdoor.starspace.link, port: 443, type: trojan, password: 4brytjljFgnUu3WU, sni: outdoor.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: rooms.starspace.link, port: 443, type: trojan, password: 5HfENR8nt2PR8reH, sni: rooms.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.00MB/s(Youtube:不良林), server: storage.starspace.link, port: 443, type: trojan, password: W8gVbKNAZlFzgGPn, sni: storage.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.38MB/s(Youtube:不良林), server: snacks.starspace.link, port: 443, type: trojan, password: 0lbw6RXSl7eqCYMv, sni: snacks.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-2.30MB/s(Youtube:不良林), server: 213.183.51.172, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇷🇺 俄罗斯联邦-3.05MB/s(Youtube:不良林), server: 213.183.53.200, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇳🇱 荷兰-2.16MB/s(Youtube:不良林), server: 213.183.59.206, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇷🇺 俄罗斯联邦-4.43MB/s(Youtube:不良林), server: 213.183.53.200, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 波兰-2.05MB/s(Youtube:不良林), server: 217.30.10.66, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 波兰-1.76MB/s(Youtube:不良林), server: 217.30.10.63, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 波兰-1.79MB/s(Youtube:不良林), server: 217.30.10.66, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 波兰-1.65MB/s(Youtube:不良林), server: 217.30.10.68, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 波兰-1.57MB/s(Youtube:不良林), server: 217.30.10.63, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.80MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-261.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-11.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.05MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 波兰-2.05MB/s(Youtube:不良林)
+      - 波兰-1.76MB/s(Youtube:不良林)
+      - 波兰-1.79MB/s(Youtube:不良林)
+      - 波兰-1.65MB/s(Youtube:不良林)
+      - 波兰-1.57MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.80MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-261.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-11.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.05MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 波兰-2.05MB/s(Youtube:不良林)
+      - 波兰-1.76MB/s(Youtube:不良林)
+      - 波兰-1.79MB/s(Youtube:不良林)
+      - 波兰-1.65MB/s(Youtube:不良林)
+      - 波兰-1.57MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.80MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-261.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-11.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.05MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 波兰-2.05MB/s(Youtube:不良林)
+      - 波兰-1.76MB/s(Youtube:不良林)
+      - 波兰-1.79MB/s(Youtube:不良林)
+      - 波兰-1.65MB/s(Youtube:不良林)
+      - 波兰-1.57MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.80MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-261.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-11.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.05MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 波兰-2.05MB/s(Youtube:不良林)
+      - 波兰-1.76MB/s(Youtube:不良林)
+      - 波兰-1.79MB/s(Youtube:不良林)
+      - 波兰-1.65MB/s(Youtube:不良林)
+      - 波兰-1.57MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.80MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-261.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-11.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.05MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 波兰-2.05MB/s(Youtube:不良林)
+      - 波兰-1.76MB/s(Youtube:不良林)
+      - 波兰-1.79MB/s(Youtube:不良林)
+      - 波兰-1.65MB/s(Youtube:不良林)
+      - 波兰-1.57MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.80MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-261.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-11.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.05MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 波兰-2.05MB/s(Youtube:不良林)
+      - 波兰-1.76MB/s(Youtube:不良林)
+      - 波兰-1.79MB/s(Youtube:不良林)
+      - 波兰-1.65MB/s(Youtube:不良林)
+      - 波兰-1.57MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.80MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-261.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-11.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.05MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 波兰-2.05MB/s(Youtube:不良林)
+      - 波兰-1.76MB/s(Youtube:不良林)
+      - 波兰-1.79MB/s(Youtube:不良林)
+      - 波兰-1.65MB/s(Youtube:不良林)
+      - 波兰-1.57MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
